# disaster_response-drone_simulation

./: structure.txt
configs/: nav2_params.yaml  slam_configs.yaml
install/: local_setup.sh  setup.sh
install/human_detection/share/human_detection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navigation_slam/share/ament_index/resource_index/package_run_dependencies/: navigation_slam
install/navigation_slam/share/navigation_slam/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navigation_slam/share/navigation_slam/launch/launch/: gazebo_world.launch.py  slam_launch.py
launch/: gazebo_world.launch.py  human_detection_launch.py  simulation_launch.py  slam_launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
src/ros2/human_detection/: CMakeLists.txt
src/ros2/human_detection/src/: human_detection_node.py
src/ros2/navigation_slam/: CMakeLists.txt  package.xml
src/ros2/navigation_slam/src/: slam_node.py
worlds/: disaster_world.world
