<package format="2">
  <name>navigation_slam</name>
  <version>0.0.1</version>
  <description>ROS2 SLAM for Disaster Response Drone</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
